frontpage extra margin fixed

--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -30,7 +30,7 @@ h3::after {
   content: "";
   display: block;
   height: 1.5px;
-  margin: 20px 0px;
+  margin: 20px 20px 20px 0px;
   
 }
 hr {
